infra-apps/base/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    argocd.argoproj.io/hook: PostSync
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: cilium
  rules:
  - host: argocd.arouene.lucca.io
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argocd.arouene.lucca.io
    secretName: argocd-cert
